# BAGEL

./: .gitignore  README.md  pyproject.toml
bagel/: __init__.py
bagel/data/: data_utils.py  dataset_base.py  dataset_info.py  dynamics_dataset.py  t2i_dataset.py  transforms.py  video_utils.py  vlm_dataset.py
bagel/data/configs/: example.yaml
bagel/data/configs/libero/: goal.yaml  long.yaml  object.yaml  spatial.yaml
bagel/data/interleave_datasets/: __init__.py  interleave_t2i_dataset.py
bagel/modeling/bagel/: bagel.py  modeling_utils.py  qwen2_navit.py  siglip_navit.py
bagel/modeling/cache_utils/: taylorseer.py
scripts/: convert_libero_data.py  convert_libero_data.sh  train_libero.sh
train/: fsdp_utils.py  pretrain_unified_navit.py  train_utils.py
