[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bagel"
version = "0.1.0"
description = "BAGEL world model components for VLA-RL research."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes",
    "decord==0.6.0",
    "einops==0.8.1",
    "gradio",
    "huggingface-hub==0.29.1",
    "matplotlib==3.7.0",
    "ninja",
    "numpy==1.24.4",
    "opencv-python==4.7.0.72",
    "pyarrow==11.0.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scipy==1.10.1",
    "sentencepiece==0.1.99",
    "setuptools",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.49.0",
    "triton ; sys_platform != 'win32'",
    "triton-windows ; sys_platform == 'win32'",
    "wandb",
    "wheel",
    "xlsxwriter",
    "zmq"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bagel*"]

[tool.setuptools.package-data]
"bagel.data" = ["configs/**/*.yaml"]
